# hello-world-

ML base test/: main.cpp  matrix_ot.cpp
ML base test/inc/: matrix_ot.h  xxwsL.h
ML base test/user_file/: main.cpp  matrix_ot.cpp  network.cpp  sys_baseot.cpp  xxwsL_math.cpp
ML2.0/: simaple.7z
ML2.0/user_file/: cnn.cpp  graph.cpp  matrix_ot.cpp  mlp.cpp  network.cpp  sys_baseot.cpp  tensor.cpp  xxwsL_math.cpp
ML_base_test/simaple/: demo.txt  discrete_data.7z  test.txt
ML_base_test/user_file/: cnn.cpp  network.cpp  (+2 more)
deep base test/: main.cpp  matrix_ot.cpp
emwin for class/: main.c
emwin_for_class/: main.h
image processing/: stm32f7bp0.7z
leecode/: CMakeLists.txt  main.cpp
leecode/inc/: 3sum_closest_t.h  3sum_t.h  4sum_t.h  ListNode.h  ach_atoi_t.h  add_binary_t.h  climb_stair_t.h  contain_most_water_t.h  count_and_say_t.h  divide_two_integers_t.h  int_to_roman_t.h  interval.h  jump_game_t.h  len_of_lastword_t.h  letter_combin_of_number_t.h  longest_backtext_sub_t.h  longest_common_prefix_t.h  longest_substring_t.h  max_subarray_t.h  median_two_sortarray_t.h  merge_interval_t.h  merge_sort_array_t.h  merge_sort_list_t.h  merge_two_chainlist_t.h  my_sqrt_t.h  pailndrome_number_t.h  permutation_queue_t.h  plus_one_t.h  regular_match_t.h  remove_element_t.h  remove_nth_listnode_t.h  remove_vec_same_t.h  reverse_Integer_t.h  reverse_list_in_k_group_t.h  rm_dup_sortlist_t.h  roman_to_int_t.h  rotate_list_t.h  same_tree_t.h  search_insert_pos_t.h  spiral_mat_t.h  (+8 more)
leecode/res/: CMakeLists.txt  pailndrome_number_t.cpp
reptile/: 爬虫.pyproj  爬虫.sln
爬虫/: 爬虫.py
(+409 files in other folders)
